@@ -28,6 +28,7 @@ CFLAGS += -Wall
 CFLAGS += -W -Wstrict-prototypes
 CFLAGS += -fno-common
 CFLAGS += -DMINIUPNPC_SET_SOCKET_TIMEOUT
+CFLAGS += -DMINIUPNPC_GET_SRC_ADDR
 CFLAGS += -D_BSD_SOURCE -D_POSIX_C_SOURCE=1
 CFLAGS += -ansi
 # -DNO_GETADDRINFO
