@@ -3,6 +3,7 @@ miniUPnP client Changelog.
 
 2012/06/23:
   More error return checks in upnpc.c
+  #define MINIUPNPC_GET_SRC_ADDR enables receivedata() to get scope_id
   increment API_VERSION to 9
 
 2012/06/20:
